load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("@rules_spring//springboot:springboot.bzl", "springboot")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "java-maven-lib",
    srcs = glob(["src/main/java/org/daming/hoteler/*.java"]),
    # 【核心修正】将所有的 @maven//:... 替换为 @unpinned_maven//:...
    deps = [
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_web",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_jdbc",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_aop",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_security",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_cache",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_actuator",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_data_redis",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_graphql",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_quartz",
        "@unpinned_maven//:io_micrometer_micrometer_registry_prometheus",
        "@unpinned_maven//:org_mybatis_spring_boot_mybatis_spring_boot_starter",

        "@unpinned_maven//:org_postgresql_postgresql",
        "@unpinned_maven//:org_springdoc_springdoc_openapi_starter_webmvc_ui",
        "@unpinned_maven//:io_jsonwebtoken_jjwt_api",
        "@unpinned_maven//:io_jsonwebtoken_jjwt_impl",
        "@unpinned_maven//:io_jsonwebtoken_jjwt_jackson",
        "@unpinned_maven//:commons_codec_commons_codec",
        "@unpinned_maven//:org_apache_commons_commons_lang3",
        "@unpinned_maven//:jakarta_xml_bind_jakarta_xml_bind_api",
        # 注意: 如果 cn_hutool_hutool_crypto 不在你的 maven_install 列表中，需要添加进去
        "@unpinned_maven//:cn_hutool_hutool_crypto",

        "@unpinned_maven//:org_springframework_boot_spring_boot",
        "@unpinned_maven//:org_springframework_boot_spring_boot_loader",
        "@unpinned_maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@unpinned_maven//:org_springframework_spring_beans",
        "@unpinned_maven//:org_springframework_spring_web",
        "@unpinned_maven//:org_springframework_spring_context",
        "@unpinned_maven//:org_springframework_spring_tx",
    ],
    resources = [
        "//src/main/resources:resource",
    ],
)

# ... (java_binary and springboot rules remain unchanged)

java_test(
    name = "tests",
    srcs = glob([
        "src/test/java/org/daming/hoteler/*.java",
        "src/test/java/org/daming/hoteler/config/*.java",

    ]),
    test_class = "org.daming.hoteler.HotelerApplicationTests",
    deps = [
        ":java-maven-lib",
        "@unpinned_maven//:org_springframework_boot_spring_boot_starter_test",
        "@unpinned_maven//:org_springframework_security_spring_security_test",

        "@unpinned_maven//:org_springframework_boot_spring_boot_test",
        "@unpinned_maven//:org_springframework_spring_test",
        "@unpinned_maven//:org_junit_jupiter_junit_jupiter",
        "@unpinned_maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)