load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/damingerdai/hoteler/migration
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "migration_lib",
    srcs = [
        "migration.go",
    ],
    importpath = "github.com/damingerdai/hoteler/migration",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "//pkg/cmd",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/file",
        "@com_github_joho_godotenv//autoload",
    ],
)

go_library(
    name = "hoteler_lib",
    srcs = ["main.go"],
    importpath = "github.com/damingerdai/hoteler/migration",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
        "@com_github_joho_godotenv//autoload",
    ],
)

go_binary(
    name = "migration",
    embed = [":migration_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "hoteler",
    embed = [":hoteler_lib"],
    visibility = ["//visibility:public"],
)
