load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "migrate.go",
        "root.go",
        "seed.go",
        "version.go",
    ],
    importpath = "github.com/damingerdai/hoteler/migration/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd",
        "@com_github_spf13_cobra//:cobra",
    ],
)
