load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "times",
    srcs = ["times.go"],
    importpath = "github.com/damingerdai/hoteler/migration/internal/times",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "times_test",
    srcs = ["times_test.go"],
    embed = [":times"],
)
