load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "url",
    srcs = ["url.go"],
    importpath = "github.com/damingerdai/hoteler/migration/internal/url",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "url_test",
    srcs = ["url_test.go"],
    embed = [":url"],
)
