load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
    ],
    importpath = "github.com/damingerdai/hoteler/migration/pkg/cmd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/database",
        "//internal/files",
        "//internal/times",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/file",
    ],
)
